<resources>
    <string name="read_more">show more</string>
    <string name="read_less">show less</string>
    <string name="app_name" translatable="false">My Menu</string>
    <string name="watermark">Al-Ameen Distribution For Android</string>
    <string name="background">Background</string>
    <string name="set_background">Set Background</string>
    <string name="store_inventory">Store Inventory</string>
    <string name="inventory">Inventory</string>
    <string name="please_enter_new_value">Please Enter New Value</string>
    <string name="new_value_bigger_than_total">Discount value cannot be bigger than invoice total!</string>
    <string name="item_discount_bigger_than_item_total">Item discount value cannot be bigger than item total!</string>
    <string name="neg_no_permissions">No permission to Negative Sales</string>
    <string name="settings">Settings</string>
    <string name="main">Main</string>
    <string name="promotion_details">Details</string>
    <string name="bonus_promotion">Bonus</string>
    <string name="CurrenciesEntry">Transaction by several currencies</string>
    <string name="cheque_value">Enter the value of cheque!</string>
    <string name="cheque_number">Enter the number of cheque!</string>
    <string name="No_selsectTypeCheque">can\'t save cheque!.. check cheque Types </string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="condition">Condition</string>
    <string name="available">Available</string>
    <string name="meter">m</string>
    <string name="kelo_meter">km</string>
    <string name="type_product_name">Type product name&#8230;</string>
    <string name="share">Share</string>
    <string name="share_by">Share by</string>
    <string name="realized">Realized</string>
    <string name="remaining">Remaining</string>
    <string name="customers">Customers</string>
    <string name="invoice">Invoice</string>
    <string name="activities">Activities</string>
    <string name="no_sale">No Sale</string>
    <string name="vist_operations">Vist Operations</string>
    <string name="new_customer">New Customer</string>
    <string name="over_max_visit_out_of_route">You have exceeded the maximum Visit Out Of Route</string>
    <string name="over_max_visit_per_day">You have exceeded the maximum Visit Per Day</string>
    <string name="show_prodcuts_by_groups">Show Prodcuts By Groups</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="phone4">الهاتف</string>
    <string name="phone3" translatable="false">Phone</string>
    <string name="Location" translatable="false">Location</string>
    <string name="Location_ar" translatable="false">الموقع</string>
    <string name="mobile">Mobile</string>
    <string name="area">Area</string>
    <string name="street">Street</string>
    <string name="type">Type</string>
    <string name="expense">Expense</string>
    <string name="channel">Channel</string>
    <string name="location">Location</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="show_all">Show All</string>
    <string name="search_hint">Search&#8230;</string>
    <string name="disc_type">Discount Type</string>
    <string name="calced_value">Discount Value</string>
    <string name="custom_value">Custom Value</string>
    <string name="all">All</string>
    <string name="today_route">Today Route</string>
    <string name="specific_day">Specific Day</string>
    <string name="nearby_customers">Nearby Customer</string>
    <string name="cash">Cash</string>
    <string name="cheque">Cheque</string>
    <string name="cheques">Cheques</string>
    <string name="no_questionnaires_delete">data not saved for Delete</string>
    <string name="no_questionnaires_save"> The questionnaire must be entered first </string>
    <string name="add_check">Add a new cheque</string>
    <string name="pay_type">Pay Type</string>
    <string name="pay_type_en" translatable="false">Pay Type</string>
    <string name="pay_type_ar" translatable="false">طريقة الدفع</string>
    <string name="stock_quantity">Stock Quantity</string>
    <string name="store">Store</string>
    <string name="products">Products</string>
    <string name="promotion">Promotions</string>
    <string name="promotion_product">promotions Products</string>
    <string name="bonus_product">Bonus Products</string>
    <string name="customer_type">Customer Type</string>
    <string name="details">Details</string>
    <string name="select">Select</string>
    <string name="select_bonus">Select Bonus</string>
    <string name="discounts">Discounts</string>
    <string name="discount4" translatable="false">Discount</string>
    <string name="payments">vouchers</string>
    <string name="payments2">Payments</string>
    <string name="set_quantity_or_bonus">Set Quantity or Bonus</string>
    <string name="printing">Printing</string>
    <string name="printing_fields">Printing Fields</string>
    <string name="print">Print</string>
    <string name="print_all_invoces">Print Invoces</string>
    <string name="print_all_entries">Print Entries</string>
    <string name="logo">Logo</string>
    <string name="select_logo">Max 900w x 900h</string>
    <string name="size_image_msg1">Failure Loaded Image \n Max Image Size Must is 900w x 900h</string>
    <string name="size_image_msg2">Max Size Of Image is </string>
    <string name="size_image_title">Warning</string>
    <string name="custom_footer">Custom Footer</string>
    <string name="custom_header">Custom Header</string>
    <string name="no_permission_to_add_new_customers">No permission to add new customers</string>
    <string name="set_gps_location">Set GPS location</string>
    <string name="set_customer_name">Set customer name!</string>
    <string name="no_connection_customer_will_synced_when_connection_available">No Connection! \n Customer will be synced when connection is available</string>
    <string name="no_connection_address_card_will_synced_when_connection_available">No Connection! \n Address Card will be synced when connection is available</string>
    <string name="can_not_get_your_location_Please_check_GPS_enabled_or_change_position">Can not get your location! \n Please cheque the GPS is enabled or change your position.</string>
    <string name="no_connection_data_will_be_synced_when_connection_available">No Connection! \n Data will be synced when connection is available</string>
    <string name="no_">No</string>
    <string name="max_invoices_count_is_10">Max invoices count is 10!</string>
    <string name="customer_account_over_max_debt">customer account is over max debt!</string>
    <string name="no_items">You have no items yet</string>
    <string name="can_not_update_invoice_visit_finished">Can not update invoice! Visit is finished.</string>
    <string name="visit_crached">Visit is crached!</string>
    <string name="invoice_saved_previously">Invoice saved previously</string>
    <string name="stock_saved_previously">Stock saved previously</string>
    <string name="invoice_saved">Invoice saved</string>
    <string name="stock_saved">Stock saved</string>
    <string name="custom_company_name">Company Name</string>
    <string name="display">Display</string>
    <string name="add_products_method">Add products method</string>
    <string name="show_quantity_on_product_image">Show quantity on product image</string>
    <string name="show_product_name_on_image">Show product name on image</string>
    <string name="serial_number_check">Check serial number</string>
    <string name="allow_repeat_product_in_bill">Allow to repeat product in bill</string>
    <string name="products_view_style">Products view style</string>
    <string name="printer">Printer</string>
    <string name="printer_model">Printer Model</string>
    <string name="no_connection_invoice_will_synced_when_connection_availabl">No Connection!\nInvoice will be synced when connection is available</string>
    <string name="error_deleting_invoice">Error deleting invoice!</string>
    <string name="error_deleting_stock">Error deleting stock!</string>
    <string name="invoice_deleted">Invoice deleted</string>
    <string name="delete_entry">delete entry</string>
    <string name="print_entry">print entry</string>
    <string name="print_cheque">print cheque</string>
    <string name="delete_chque">delete cheque</string>
    <string name="stock_deleted">Stock deleted</string>
    <string name="no_permission_to_delete_invoice">No permission to delete invoice!</string>
    <string name="no_permission_to_delete_entry">No permission to delete entry!</string>
    <string name="no_permission_to_delete_cheque">No permission to delete cheque!</string>
    <string name="bills">Bills</string>
    <string name="can_not_start_visit_before_sync_date">Can not start visit before sync date!</string>
    <string name="can_not_add_bill_before_sync_date">Can not add invoice before sync date!</string>
    <string name="can_not_add_entry_before_sync_date">Cannot add entry before sync date!</string>
    <string name="can_not_add_data_before_sync_date">Cannot add data before sync date!</string>
    <string name="entry_deleted">Entry deleted</string>
    <string name="cheque_deleted">Cheque deleted</string>
    <string name="done">Done</string>
    <string name="default_unit">Default Unit</string>
    <string name="first_unit">First Unit</string>
    <string name="second_unit">Second Unit</string>
    <string name="third_unit">Third Unit</string>
    <string name="no_products">There are no products in the selected options</string>
    <string name="there_are_no_products_in_selected_options">There are no products in the selected options</string>
    <string name="customer">Customer</string>
    <string name="customer2">Customer</string>
    <string name="customer3">زبون</string>
    <string name="using_print_model_UAE">Using Print Model UAE</string>
    <string name="group">Group</string>
    <string name="using_print_model2" translatable="false">Using Print Model UAE</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="customer_statement">Customer Statement</string>
    <string name="error_deleting_entry">Error deleting entry!</string>
    <string name="error_deleting_cheque">Error deleting cheque!</string>
    <string name="error_saving_shelve_share">Error saving shelve share!</string>
    <string name="error_saving_questionnair">Error saving questionnair!</string>
    <string name="error_saving_SerialNumberTransaction">Error saving serial number Transaction</string>
    <string name="typeexportserialnumber">Method of entering serial numbers</string>
    <string name="max_entry_count_is_10">Max Entry count is 10!</string>
    <string name="max_cheque_count_is_10">Max Cheque count is 10!</string>
    <string name="enter_value">Enter value!</string>
    <string name="select_expense">Select Expense!</string>
    <string name="price">Price</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="unit">By Unit</string>
    <string name="latinName">Latin Name</string>
    <string name="bar_code">Barcode</string>
    <string name="license">License</string>
    <string name="category">Category</string>
    <string name="loading_images">Loading images</string>
    <string name="email">Email</string>
    <string name="forget_pass"><u>Forgot password</u></string>
    <string name="register"><u>Registration</u></string>
    <string name="confirm_password">confirm password</string>
    <string name="regist">Register</string>
    <string name="sale_type">Sales By</string>
    <string name="weight">Weight</string>
    <string name="take_photo">Take Photo</string>
    <string name="more_details">More Details</string>
    <string name="unit_name">Unit Name</string>
</resources>