<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/app_color_back_blue"
    tools:context=".activity.RegistrationActivity"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activity.RegistrationActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/s_35_40_50"
        android:layout_marginTop="@dimen/d_10_15_22"
        android:layout_marginBottom="@dimen/d_40_45_55"
        android:textColor="@color/app_color_dark_gray"
        android:text="@string/register"
        android:gravity="center"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rg_et_email"
            android:textSize="@dimen/s_16_18_22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:background="@color/hidden_color"
            android:layout_margin="@dimen/d_3_5_7_10"
            android:textColor="@color/app_color_blue_gray"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:textSize="@dimen/s_16_18_22"
            android:id="@+id/rg_et_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/custom_company_name"
            android:background="@color/hidden_color"
            android:layout_margin="@dimen/d_3_5_7_10"
            android:textColor="@color/app_color_blue_gray"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textSize="@dimen/s_16_18_22"
            android:layout_height="wrap_content"
            android:id="@+id/rg_et_password"
            android:hint="@string/password"
            android:background="@color/hidden_color"
            android:inputType="textPassword"
            android:layout_margin="@dimen/d_3_5_7_10"
            android:textColor="@color/app_color_blue_gray"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:passwordToggleEnabled="true"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/s_16_18_22"
            android:hint="@string/confirm_password"
            android:id="@+id/rg_et_confirm_password"
            android:inputType="textPassword"
            android:background="@color/hidden_color"
            android:layout_margin="@dimen/d_3_5_7_10"
            android:textColor="@color/app_color_blue_gray"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s_12_14_16"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/d_3_5_7_10"
        android:text="@string/license"
        />
    <EditText
        android:id="@+id/rg_et_license"
        android:inputType="textMultiLine"
        android:textSize="@dimen/s_12_14_16"
        android:layout_marginEnd="@dimen/d_3_5_7_10"
        android:layout_marginStart="@dimen/d_3_5_7_10"
        android:gravity="top"
        android:background="@drawable/background_edittext"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_80_90_110"
        android:autofillHints="@string/license" />
    <ru.katso.livebutton.LiveButton
        android:layout_marginTop="@dimen/s_12_14_16"
        android:id="@+id/btn_register"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/d_50_60_70"
        android:layout_marginEnd="@dimen/d_50_60_70"
        android:layout_height="@dimen/d_50_60_70"
        android:text="@string/regist"
        android:textColor="#ffffff"
        android:textSize="@dimen/s_20_25_35"
        app:backgroundColor="@color/app_color_blue_gray"
        app:corners="4dp"
        app:normalHeight="2dp"
        app:pressedHeight="2dp"
        app:shadowColor="@color/app_color_back_blue"/>
</LinearLayout>
</ScrollView>