<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/app_color_back_blue"
    tools:context=".activity.LoginActivity"

    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/s_35_40_50"
        android:layout_marginTop="@dimen/d_10_15_22"
        android:layout_marginBottom="@dimen/d_40_45_55"
        android:textColor="@color/app_color_dark_gray"
        android:text="@string/login"
        android:gravity="center"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:id="@+id/lgin_et_email"
            android:background="@color/hidden_color"
            android:layout_margin="@dimen/d_3_5_7_10"
            android:textColor="@color/app_color_blue_gray"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:id="@+id/lgin_et_password"
            android:background="@color/hidden_color"
            android:layout_margin="@dimen/d_3_5_7_10"
            android:textColor="@color/app_color_blue_gray"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <ru.katso.livebutton.LiveButton
        android:layout_marginTop="@dimen/s_12_14_16"
        android:id="@+id/btn_Login"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/s_12_14_16"
        android:layout_marginEnd="@dimen/s_12_14_16"
        android:layout_height="@dimen/d_50_60_70"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="@dimen/s_20_25_35"
        app:backgroundColor="@color/app_color_blue_gray"
        app:corners="4dp"
        app:normalHeight="2dp"
        app:pressedHeight="2dp"
        app:shadowColor="@color/app_color_back_blue"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/d_3_5_7_10"
        android:id="@+id/tv_forgotPassword"
        android:textColor="@color/app_color_midnight_blue"
        android:text="@string/forget_pass"
        />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <TextView
            android:id="@+id/tv_register"
            android:gravity="end"
            android:layout_margin="@dimen/d_3_5_7_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/app_color_midnight_blue"
            android:text="@string/register"
            />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>