<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    tools:context=".activity.AddItemActivity"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/WhiteSmoke"
    android:orientation="vertical"
    android:padding="@dimen/s_2_3_4"
    tools:context=".activity.AddItemActivity">
    <androidx.cardview.widget.CardView
        android:paddingStart="@dimen/d_8_10_12"
        android:paddingEnd="@dimen/d_8_10_12"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/d_3_5_7_10"
        app:cardElevation="@dimen/d_3_5_7_10"
        app:cardCornerRadius="@dimen/d_3_5_7_10"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_margin="@dimen/s_2_3_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_50_60_70"
        >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_name"
        android:textSize="@dimen/s_16_18_22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:maxLines="2"
        android:background="@color/hidden_color"
        android:layout_margin="@dimen/d_3_5_7_10"
        android:textColor="@color/app_color_blue_gray"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_50_60_70"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_latinName"
            android:textSize="@dimen/s_16_18_22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/latinName"
            android:background="@color/hidden_color"
            android:layout_margin="@dimen/d_3_5_7_10"
            android:textColor="@color/app_color_blue_gray"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_marginTop="@dimen/d_3_5_7_10"
        android:layout_marginStart="@dimen/d_3_5_7_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        />
    <Spinner
        style="@style/Widget.AppCompat.DropDownItem.Spinner"
        android:id="@+id/sp_category"
        android:layout_marginTop="@dimen/d_3_5_7_10"
        android:layout_width="match_parent"
        android:minHeight="@dimen/s_30_35_45"
        android:layout_height="@dimen/d_40_45_55"
        />
        <EditText
            android:layout_marginTop="@dimen/d_3_5_7_10"
            android:id="@+id/more_details"
            android:padding="@dimen/s_2_3_4"
            android:textSize="@dimen/s_14_16_18"
            android:hint="@string/more_details"
            android:background="@drawable/background_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/d_80_90_110"
            android:inputType="textMultiLine"
            android:gravity="top"
            />
    </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:paddingStart="@dimen/d_8_10_12"
        android:paddingEnd="@dimen/d_8_10_12"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/d_3_5_7_10"
        app:cardElevation="@dimen/d_3_5_7_10"
        app:cardCornerRadius="@dimen/d_3_5_7_10"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_margin="@dimen/s_2_3_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <TextView
        android:layout_marginTop="@dimen/d_3_5_7_10"
        android:layout_marginStart="@dimen/d_3_5_7_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sale_type"
        />
    <RadioGroup
        android:padding="@dimen/d_2_3_4"
        android:layout_marginEnd="@dimen/d_1_2_4"
        android:layout_marginStart="@dimen/d_1_2_4"
        android:id="@+id/rg_salesType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/unit"
            android:textSize="@dimen/s_14_18_22" />

        <RadioButton
            android:id="@+id/rbWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/d_2_3_4"
            android:text="@string/weight"
            android:textSize="@dimen/s_14_18_22" />
    </RadioGroup>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_50_60_70"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_UnitName"
                    android:textSize="@dimen/s_16_18_22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/unit_name"
                    android:background="@color/hidden_color"
                    android:layout_margin="@dimen/d_3_5_7_10"
                    android:textColor="@color/app_color_blue_gray"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_50_60_70"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_price"
                    android:textSize="@dimen/s_16_18_22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    android:inputType="number"
                    android:background="@color/hidden_color"
                    android:layout_margin="@dimen/d_3_5_7_10"
                    android:textColor="@color/app_color_blue_gray"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_50_60_70"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_barcode"
                    android:textSize="@dimen/s_16_18_22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bar_code"
                    android:background="@color/hidden_color"
                    android:layout_margin="@dimen/d_3_5_7_10"
                    android:textColor="@color/app_color_blue_gray"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:paddingStart="@dimen/d_8_10_12"
        android:paddingEnd="@dimen/d_8_10_12"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/d_3_5_7_10"
        app:cardElevation="@dimen/d_3_5_7_10"
        app:cardCornerRadius="@dimen/d_3_5_7_10"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/iv_product_image"
                android:layout_margin="@dimen/d_3_5_7_10"
                android:src="@drawable/image"
                android:scaleType="centerInside"
                android:background="@color/white"
                android:layout_width="@dimen/d_120_140_170"
                android:layout_height="@dimen/d_120_140_170"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/ln_load_folder"
                android:layout_marginBottom="@dimen/s_12_14_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/d_25_30_40"
                    android:layout_height="@dimen/d_25_30_40"
                    android:src="@drawable/add_folder"
                    />
                <TextView
                    android:layout_margin="@dimen/s_2_3_4"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading_images"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ln_take_photo_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/d_25_30_40"
                    android:layout_height="@dimen/d_25_30_40"
                    android:src="@drawable/add_photo"
                    />
                <TextView
                    android:layout_margin="@dimen/s_2_3_4"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/take_photo"/>
            </LinearLayout>
        </LinearLayout>
            <LinearLayout
                android:layout_width="@dimen/d_90_100_120"
                android:layout_height="@dimen/d_90_100_120"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >
                <ProgressBar
                    android:visibility="gone"
                    android:id="@+id/progress_upload_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
            <com.airbnb.lottie.LottieAnimationView
                android:visibility="gone"
                android:id="@+id/done_upload_img"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:lottie_fileName="upload2.json"
                app:lottie_loop="false"
                app:lottie_autoPlay="false"
                />
        </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <ru.katso.livebutton.LiveButton
        android:layout_marginTop="@dimen/s_12_14_16"
        android:id="@+id/btn_save"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/d_50_60_70"
        android:layout_marginEnd="@dimen/d_50_60_70"
        android:layout_height="@dimen/d_50_60_70"
        android:text="@string/save"
        android:textColor="#ffffff"
        android:textSize="@dimen/s_20_25_35"
        app:backgroundColor="@color/Green"
        app:corners="4dp"
        app:normalHeight="2dp"
        app:pressedHeight="2dp"
        app:shadowColor="@color/ForestGreen"/>
</LinearLayout>
</ScrollView>